--- a/content/home/index.en.yaml
+++ b/content/home/index.en.yaml
@@ -1,5 +1,9 @@
-title: Home title
-banner:
-  markdown: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/content/home/banner.en.md
-# menu:
-#   markdown: ""
+page:
+  title: Home title
+content:
+  video:
+    src: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/assets/videos/sample.en.mp4
+
+# Please do not edit this part
+markdown:
+  banner: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/content/home/banner.en.md
