--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - assets/**
+      - content/**
 jobs:
   build:
     runs-on: ubuntu-latest
