--- a/content/home/index.ja.yaml
+++ b/content/home/index.ja.yaml
@@ -1,7 +1,8 @@
 page:
   title: ホームタイトル
-video:
-  src: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/assets/videos/sample.ja.mp4
+content:
+  video:
+    src: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/assets/videos/sample.ja.mp4
 
 # Please do not edit this part
 markdown:
