--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -1,15 +1,22 @@
 name: Deploy content to site
 on:
   workflow_dispatch:  
-  push:
-    branches:
-      - main
-    paths:
-      - assets/**
-      - content/**
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - assets/**
+  #     - content/**
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Print hello world
-      run: echo "Hello, World!"
+    - name: Deploy content
+      run: |
+        curl -L \
+        -X POST \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer ${{secrets.DEPLOY_CONTENT_TOKEN}}" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/repos/jessesoo-tk/test-site/actions/workflows/deploy-site.yml/dispatches \
+        -d '{"ref":"main"}'
