--- a/content/home/en/content.yaml
+++ b/content/home/en/content.yaml
@@ -1,4 +1,4 @@
-title: Home 1
+title: Home
 greeting:
   video:
     src: https://raw.githubusercontent.com/jessesoo-tk/test-cms/main/content/home/en/assets/greeting.mp4
